--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,10 @@ body {
   }
   
   /* main */
-  
+  .auth-image{
+      float: left;
+      margin-right: 20px;
+  }
   #main-container {
     padding-top: 130px;
     min-height: calc(100vh - 70px);
