--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,6 +156,12 @@ body {
   }
 
   @media screen and (max-width: 640px){
-
+    #masthead {
+      float: none;
+      display: block;
+      text-align: left;
+    }
     
-  }
+    }
+
+  
